apps/base/davinci-resolve-project-server/davinci-resolve.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: davinci-resolve-system
  labels:
    networking.tinyrack.net/isolation: enabled
