apps/base/davinci-resolve-project-server/davinci-resolve.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: davinci-resolve-service
  namespace: davinci-resolve-system
  annotations:
    metallb.io/loadBalancerIPs: 10.132.246.3
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: davinci-resolve-database-cluster-rw
