apps/base/davinci-resolve-project-server/davinci-resolve.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: app-davinci-resolve
  namespace: davinci-resolve-system
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
      k8s:io.kubernetes.pod.namespace: davinci-resolve-system
      cnpg.io/cluster: davinci-resolve-database-cluster
  ingress:
    - fromCIDRSet:
        - cidrGroupRef: lan
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cnpg-system
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
            - port: "9187"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik-system
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: davinci-resolve-system
            cnpg.io/cluster: davinci-resolve-database-cluster
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "8000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: davinci-resolve-system
            cnpg.io/cluster: davinci-resolve-database-cluster
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "8000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik-system
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
