apps/base/davinci-resolve-project-server/davinci-resolve.network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: app-davinci-resolve
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
      k8s:io.kubernetes.pod.namespace: davinci-resolve-system
      cnpg.io/cluster: davinci-resolve-database-cluster
  ingress:
    - fromCIDR:
        - 10.132.244.0/22
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cnpg-system
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
            - port: "9187"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: davinci-resolve-system
            cnpg.io/cluster: davinci-resolve-database-cluster
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "8000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: davinci-resolve-system
            cnpg.io/cluster: davinci-resolve-database-cluster
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "8000"
              protocol: TCP
