apps/base/davinci-resolve-project-server/davinci-resolve.traefik.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: route-davinci-resolve
  namespace: traefik-external-system
  labels:
    networking.tinyrack.net/owner: davinci-resolve
  annotations:
    networking.tinyrack.net/hosts: davinci-resolve.database.intranet.winetree94.com
spec:
  description: Allow the Davinci Resolve PostgreSQL TCP route
  endpointSelector:
    matchLabels:
      io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
      app.kubernetes.io/name: traefik
  egress:
    - toServices:
        - k8sService:
            namespace: davinci-resolve-system
            serviceName: davinci-resolve-database-cluster-rw
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: route-davinci-resolve-client
  namespace: traefik-system
  labels:
    networking.tinyrack.net/owner: davinci-resolve
  annotations:
    networking.tinyrack.net/hosts: davinci-resolve.database.intranet.winetree94.com
spec:
  description: Allow the Davinci Resolve database to reach internal Traefik
  endpointSelector:
    matchLabels:
      io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
      app.kubernetes.io/name: traefik
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: davinci-resolve-system
            cnpg.io/cluster: davinci-resolve-database-cluster
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
